Оправих move функцията